# DisprzTraining-main/DisprzTraining/Api/CalendarAPI_Spec.yml
@@ -16,39 +16,40 @@ security:
 paths:
  /v1/appointments:
     get: 
-      summary: Fetch Appointments by date
-      operationId: getAppointmentsByDate
+      summary: Fetch Appointments
+      operationId: getAllAppointments
       tags: 
         -  Appointments
       parameters: 
         - name: offSet
           in: query
+          required: true
           schema: 
             type: integer
             format: int32
         - name: Count
           in: query
+          required: true
           schema: 
             type: integer
             format: int32
-        - name: searchByDate
+        - name: searchDate
           in: query
           schema: 
             type: string
             format: date-time
+        - name: searchTitle
+          in: query
+          schema: 
+            type: string
+            format: string
       responses:
         '200':
           description: Listed an Array of Appointments By Date
           content: 
             application/json:
               schema: 
-                $ref: "#/components/schemas/TruncatedModel"
-        '404':
-          description: No Appointments found for a day
-          content:
-            application/json:
-              schema: 
-                $ref: "#/components/schemas/NotFoundError"
+                $ref: "#/components/schemas/AllAppointments"
 
     post:
       summary: Add new Appointment
@@ -61,7 +62,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Appointment"
+              $ref: "#/components/schemas/AppointmentDTO"
       responses:
         '201':
           description: New Appointment Created
@@ -69,13 +70,18 @@ paths:
             application/json:    
               schema:
                   $ref: "#/components/schemas/NewAppointmentId"
-          
+        '400':
+          description: Past Date and Time is not allowed
+          content: 
+            application/json:
+              schema: 
+                $ref: "#/components/schemas/ResponseError" 
         '409':
           description: Conflict Occured
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ConflictError" 
+                $ref: "#/components/schemas/ResponseError"
 
  /v1/appointments/{appointmentId}:
     get:
@@ -96,13 +102,13 @@ paths:
           content:
             application/json:    
               schema:
-                $ref: "#/components/schemas/Appointment"
+                $ref: "#/components/schemas/AppointmentDTO"
         '404':
           description: No Appointments Found
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/NotFoundError"
+                $ref: "#/components/schemas/ResponseError"
 
     put:
       summary: Update an existing Appointment
@@ -121,7 +127,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Appointment"
+              $ref: "#/components/schemas/AppointmentDTO"
 
       responses:
         '204':
@@ -132,7 +138,19 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ConflictError"
+                $ref: "#/components/schemas/ResponseError"
+        '404':
+          description: No Appointment Found with the given Id
+          content: 
+            application/json:
+              schema: 
+                $ref: "#/components/schemas/ResponseError" 
+        '400':
+          description: Past Date and Time is not allowed
+          content: 
+            application/json:
+              schema: 
+                $ref: "#/components/schemas/ResponseError"
         
     delete:
       summary: Delete an existing Appointment
@@ -156,20 +174,25 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/NotFoundError"
+                $ref: "#/components/schemas/ResponseError"
 
         
     
 components:
   schemas: 
 # List of Appointments
-    TruncatedModel:
-      properties: 
+    AllAppointments:
+      properties:
+        count:
+          type: integer
+          format:  int32 
         isTruncated:
           type: boolean
           format: boolean
           example: true
         appointments:
+          type: array
+          items: 
             type: object
             properties: 
               appointmentId:
@@ -188,7 +211,7 @@ components:
                 type: string
                 format: string
 # single appointment
-    Appointment:
+    AppointmentDTO:
       type: object
       properties: 
         appointmentstartTimeDate:
@@ -209,15 +232,19 @@ components:
         appointmentId:
           type: string
           format: uuid
-    NotFoundError:
-      type: integer
-      format: int32
-      example: 404
-
-    ConflictError:
-      type: integer
-      format: int32
-      example: 409
+    
+    ResponseError:
+      type: object
+      properties: 
+        language: 
+          type: string
+          format: string
+        errorMessage:
+          type: string
+          format: string
+        errorCode:
+          type: integer
+          format: int32
 
   securitySchemes:
     ApiKeyAuth:       
