# DisprzTraining-main/DisprzTraining/Controllers/AppointmentsController.cs
@@ -15,33 +15,6 @@ namespace DisprzTraining.Controllers
             _appointmentBL = appointmentBL;
         }
 
-        ErrorDetails badRequest = new ErrorDetails()
-        {
-            errorMessage = "Check the Date and Time",
-            errorCode = 400
-        };
-        ErrorDetails notFound = new ErrorDetails()
-        {
-            errorMessage = "No Appointment found with specified Id",
-            errorCode = 404
-        };
-        ErrorDetails conflict = new ErrorDetails()
-        {
-            errorMessage = "There is another Meeting with Same Time",
-            errorCode = 409
-        };
-
-
-        //getAllAppointments
-        [HttpGet, Route("v1/appointments/fetch")]
-        [ProducesResponseType(StatusCodes.Status200OK)]
-        public async Task<ActionResult> GetAllAppointments()
-        {
-            var appointments = await _appointmentBL.GetAppointments();
-            return Ok(appointments);
-        }
-
-
         //get all appointments
         [HttpGet, Route("v1/appointments")]
         [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(AllAppointments))]
@@ -51,81 +24,100 @@ namespace DisprzTraining.Controllers
             return Ok(appointments);
         }
 
-
         //get appointment by Id
         [HttpGet, Route("v1/appointments/{appointmentId}")]
         [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(Appointment))]
         public async Task<ActionResult> GetappointmentById([FromRoute] Guid appointmentId)
         {
             var existingAppointmentById = await _appointmentBL.GetAppointmentById(appointmentId);
-            return Ok(existingAppointmentById);
+            if (existingAppointmentById != null)
+            {
+                return Ok(existingAppointmentById);
+            }
+            return NotFound(new ErrorMessage()
+            {
+                errorMessage = "No Appointment found with the given Id",
+                errorCode = 404
+            });
         }
-
 
         //add new appointment
         [HttpPost, Route("v1/appointments")]
         [ProducesResponseType(StatusCodes.Status201Created, Type = typeof(NewAppointmentId))]
-        [ProducesResponseType(StatusCodes.Status409Conflict, Type = typeof(ErrorDetails))]
-        [ProducesResponseType(StatusCodes.Status400BadRequest, Type = typeof(ErrorDetails))]
-        public async Task<ActionResult> AddNewAppointment([FromBody] AppointmentDetail newAppointment)
+        [ProducesResponseType(StatusCodes.Status409Conflict, Type = typeof(ErrorMessage))]
+        [ProducesResponseType(StatusCodes.Status400BadRequest, Type = typeof(ErrorMessage))]
+        public async Task<ActionResult> AddNewAppointment([FromBody] AppointmentDTO newAppointment)
         {
-          if(await _appointmentBL.CheckDateAndTimeFormat(newAppointment))
-          {
+            if (await _appointmentBL.CheckPastDateAndTime(newAppointment))
+            {
                 var newAppointmentId = await _appointmentBL.AddNewAppointment(newAppointment);
-                if (newAppointmentId!=null)
+                if (newAppointmentId != null)
                 {
-                    var uri = $"v1/appointments/{newAppointmentId}";
-                    return Created(uri, newAppointmentId);    
-                    // Created(nameof(GetappointmentById),newAppointmentId);
+                    var actionName = nameof(GetappointmentById);
+                    return Created(actionName, newAppointmentId);
                 }
                 else
                 {
-                 return Conflict(new ErrorDetails()
-                 {
-                    errorMessage="exception",
-                    errorCode=409
-                 });   
+                    return Conflict(new ErrorMessage()
+                    {
+                        errorMessage = "Conflict occured between same meeting time or two different meetings",
+                        errorCode = 409
+                    });
                 }
-          }
-            return BadRequest();
+            }
+            return BadRequest(new ErrorMessage()
+            {
+                errorMessage = "Appointment for past time and days are not allowed ",
+                errorCode = 400
+            });
         }
 
         //update existing appointment
         [HttpPut, Route("v1/appointments/{appointmentId}")]
         [ProducesResponseType(StatusCodes.Status204NoContent)]
-        [ProducesResponseType(StatusCodes.Status409Conflict, Type = typeof(ErrorDetails))]
-        [ProducesResponseType(StatusCodes.Status404NotFound, Type = typeof(ErrorDetails))]
-        [ProducesResponseType(StatusCodes.Status400BadRequest, Type = typeof(ErrorDetails))]
-        public async Task<ActionResult> UpdateExistingAppointment([FromRoute] Guid appointmentId, [FromBody] AppointmentDetail updateAppointment)
+        [ProducesResponseType(StatusCodes.Status409Conflict, Type = typeof(ErrorMessage))]
+        [ProducesResponseType(StatusCodes.Status404NotFound, Type = typeof(ErrorMessage))]
+        [ProducesResponseType(StatusCodes.Status400BadRequest, Type = typeof(ErrorMessage))]
+        public async Task<ActionResult> UpdateExistingAppointment([FromRoute] Guid appointmentId, [FromBody] AppointmentDTO updateAppointment)
         {
-            
-               if(await _appointmentBL.CheckDateAndTimeFormat(updateAppointment))
-               {
-                var isAnyAppointment = await _appointmentBL.GetAppointmentById(appointmentId);
-                if (isAnyAppointment.Any())
+            var isDateTimeCorrect=await _appointmentBL.CheckPastDateAndTime(updateAppointment);
+            if (isDateTimeCorrect)
+            {
+                var appointmentPresent =await _appointmentBL.GetAppointmentById(appointmentId);
+                if (appointmentPresent!=null)
                 {
-                    bool isConflict = await _appointmentBL.UpdateExistingAppointment(appointmentId, updateAppointment);
-                    if (isConflict)
-                    {
-                        return Conflict(conflict);
-                    }
-                    else
+                    bool isNoConflict = await _appointmentBL.UpdateExistingAppointment(appointmentId, updateAppointment);
+                    if (isNoConflict)
                     {
                         return NoContent();
                     }
+                    else
+                    {
+                        return Conflict(new ErrorMessage()
+                        {
+                            errorMessage = "Conflict occured between same meeting time or two different meetings",
+                            errorCode = 409
+                        });
+                    }
                 }
-                return NotFound(notFound);
-               }
-                return BadRequest(badRequest);
-           
+                return NotFound(new ErrorMessage()
+                {
+                    errorMessage = "No Appointment found with the given Id",
+                    errorCode = 404
+                });
+            }
+            return BadRequest(new ErrorMessage()
+            {
+                errorMessage = "Appointment for past time and days are not allowed ",
+                errorCode = 400
+            });
         }
 
-        //change conflict function
 
         //delete appointment by Id
         [HttpDelete, Route("v1/appointments/{appointmentId}")]
         [ProducesResponseType(StatusCodes.Status204NoContent)]
-        [ProducesResponseType(StatusCodes.Status404NotFound, Type = typeof(ErrorDetails))]
+        [ProducesResponseType(StatusCodes.Status404NotFound, Type = typeof(ErrorMessage))]
         public async Task<ActionResult> DeleteAppointment([FromRoute] Guid appointmentId)
         {
             var isDeleted = await _appointmentBL.DeleteAppointment(appointmentId);
@@ -133,8 +125,11 @@ namespace DisprzTraining.Controllers
             {
                 return NoContent();
             }
-            else
-                return NotFound(notFound);
+            return NotFound(new ErrorMessage()
+            {
+                errorMessage = "No Appointment found with the given Id",
+                errorCode = 404
+            });
         }
     }
 }
