# DisprzTraining-main/DisprzTraining/Model/Appointment.cs
@@ -1,6 +1,6 @@
 namespace DisprzTraining.Model
 {
-    public class Appointment:AppointmentDetail
+    public class Appointment:AppointmentDTO
     {
         public Guid appointmentId { get; set; }        
     }
